2008-06-15  Johannes Schmid  <jhs@gnome.org>
	
	* plugins/file-manager/file-model.c (on_file_model_changed):
	Fixed file monitoring
	
	* plugins/file-manager/file-view.c (file_view_show_extended_data),
	(file_view_selection_changed):
	
	Some code refactoring
	
	* plugins/file-manager/plugin.c (on_file_view_show_popup_menu):
	Hide "rename" menu item for now

2008-06-15  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/anjuta-docman.c:
	Make sure that scintilla window is displayed

2008-06-15  Naba Kumar  <naba@gnome.org>

	* plugins/document-manager/anjuta-docman.c
	(anjuta_docman_set_current_document),
	(anjuta_docman_goto_uri_line_mark):
	* plugins/sourceview/sourceview.c (ieditor_goto_line):

	Restore text focus on switching editor with ALT+X and
	navigating from local-symbols view.
	
2008-06-15  Naba Kumar  <naba@gnome.org>

	* plugins/file-manager/file-view.c (file_view_show_extended_data):
	Fixed a crash on file selection. Gave enough buffer for the formated
	time print.
	
2008-06-15  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-preferences.c: Fixed a compile warning.

2008-06-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	Reviewed by: Naba Kumar  <naba@gnome.org>
	* plugins/project-wizard/templates/anjuta-plugin/src/plugin.c:
	Removed GNOME_CALL_PARENT.

	* libanjuta/anjuta-status.ch:
	Now it uses GtkProgressBar and GtkStatusbar instead of GnomeAppBar.
	(with modifications)
	
2008-06-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	Reviewed by: Naba Kumar  <naba@gnome.org>
	* plugins/debug-manager/info.c:
	* plugins/debug-manager/data_view.c:
	* plugins/debug-manager/debug_tree.c:
	* plugins/debug-manager/sparse_view.c:
	* plugins/project-wizard/druid.c:
	* plugins/project-wizard/property.c:
	* plugins/valgrind/vggeneralprefs.c:
	* plugins/valgrind/vgdefaultview.c:
	* plugins/valgrind/vgrule-list.c:
	* plugins/valgrind/process.c:
	* plugins/valgrind/vgcachegrindprefs.c:
	* plugins/valgrind/vgrule-editor.c: